# nam-trainer

./: .gitmodules  CLAUDE.md  LICENSE  README.md  nam_trainer.spec  pyproject.toml  requirements.txt  start.bat  start.sh  test_queue.py
.github/workflows/: build.yml
nam_trainer/gui/_resources/: config.py  queue.py  queue_window.py  settings.json  training_queue.py
tests/: conftest.py  test_config.py  test_training_job.py  test_training_queue.py
